Frontend: Added Doc.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,7 @@
 <!--
 	Authors: Lukas Pietszchmann, Vincent Ugrai
+
+	This File gets populated by React and rendered by thr Browser.
 -->
 
 <!DOCTYPE html>
